libs/extractor/tests/snapshots/snapshots/extractor__tests__style_vars_prop.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nconst dynamicColor = \"blue\";\n<Box styleVars={{ color: dynamicColor }} bg=\"var(--color)\" />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "var(--color)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst dynamicColor = \"blue\";\n<div className=\"a-a\" style={{ \"--color\": dynamicColor }} />;\n",
}
